--- a/advanced-tutorials/multiple-function-arguments/Makefile
+++ b/advanced-tutorials/multiple-function-arguments/Makefile
@@ -1,11 +1,19 @@
 export PATH := ../../venv/bin:$(PATH)
 
+.PHONY: args
+args:
+	./args.sh &> args.console
+
+.PHONY: kwargs
+kwargs:
+	./kwargs.sh &> kwargs.console
+
 .PHONY: exercise
 exercise:
 	./exercise.sh &> exercise.console
 
 .PHONY: all
-all: exercise
+all: args kwargs exercise
 
 .PHONY: git-add
 git-add: all
