docs: learn python

--- a/advanced-tutorials/generators/Makefile
+++ b/advanced-tutorials/generators/Makefile
@@ -1,4 +1,20 @@
 export PATH := ../../venv/bin:$(PATH)
 
+.PHONY: generator-function
+generator-function:
+	./generator_function.sh &> generator_function.console
+
+.PHONY: exercise
+exercise:
+	./exercise.sh &> exercise.console
+
 .PHONY: all
-all:
+all: generator-function exercise
+
+.PHONY: git-add
+git-add: all
+	@printf "\n"
+	$(MAKEFILE_SCRIPT_PATH)/fmt-markdown.sh
+
+	@printf "\n"
+	git add --all .
