--- a/advanced-tutorials/multiple-function-arguments/Makefile
+++ b/advanced-tutorials/multiple-function-arguments/Makefile
@@ -1,4 +1,24 @@
 export PATH := ../../venv/bin:$(PATH)
 
+.PHONY: args
+args:
+	./args.sh &> args.console
+
+.PHONY: kwargs
+kwargs:
+	./kwargs.sh &> kwargs.console
+
+.PHONY: exercise
+exercise:
+	./exercise.sh &> exercise.console
+
 .PHONY: all
-all:
+all: args kwargs exercise
+
+.PHONY: git-add
+git-add: all
+	@printf "\n"
+	$(MAKEFILE_SCRIPT_PATH)/fmt-markdown.sh
+
+	@printf "\n"
+	git add --all .
