--- a/advanced-tutorials/decorators/Makefile
+++ b/advanced-tutorials/decorators/Makefile
@@ -1,7 +1,11 @@
 export PATH := ../../venv/bin:$(PATH)
 
+.PHONY: exercise
+exercise:
+	./exercise.sh &> exercise.console
+
 .PHONY: all
-all:
+all: exercise
 
 .PHONY: git-add
 git-add: all
