--- a/advanced-tutorials/decorators/Makefile
+++ b/advanced-tutorials/decorators/Makefile
@@ -1,5 +1,9 @@
 export PATH := ../../venv/bin:$(PATH)
 
+.PHONY: example
+example:
+	./example.sh &> example.console
+
 .PHONY: repeater
 repeater:
 	./repeater.sh &> repeater.console
@@ -9,7 +13,7 @@ exercise:
 	./exercise.sh &> exercise.console
 
 .PHONY: all
-all: repeater exercise
+all: example repeater exercise
 
 .PHONY: git-add
 git-add: all
