docs: learn advanced python

--- a/advanced-tutorials/decorators/Makefile
+++ b/advanced-tutorials/decorators/Makefile
@@ -1,7 +1,27 @@
 export PATH := ../../venv/bin:$(PATH)
 
+.PHONY: example
+example:
+	./example.sh &> example.console
+
+.PHONY: repeater
+repeater:
+	./repeater.sh &> repeater.console
+
+.PHONY: decorating-functions
+decorating-functions:
+	./decorating_functions.sh &> decorating_functions.console
+
+.PHONY: multiply
+multiply:
+	./multiply.sh &> multiply.console
+
+.PHONY: exercise
+exercise:
+	./exercise.sh &> exercise.console
+
 .PHONY: all
-all:
+all: example repeater decorating-functions multiply exercise
 
 .PHONY: git-add
 git-add: all
