--- a/advanced-tutorials/serialization/Makefile
+++ b/advanced-tutorials/serialization/Makefile
@@ -1,7 +1,15 @@
 export PATH := ../../venv/bin:$(PATH)
 
+.PHONY: json-dumps
+json-dumps:
+	./json_dumps.sh &> ./json_dumps.console
+
+.PHONY: pickle-dumps
+pickle-dumps:
+	./pickle_dumps.sh &> ./pickle_dumps.console
+
 .PHONY: all
-all:
+all: json-dumps pickle-dumps
 
 .PHONY: git-add
 git-add: all
