--- a/advanced-tutorials/partial-functions/Makefile
+++ b/advanced-tutorials/partial-functions/Makefile
@@ -1,5 +1,12 @@
 export PATH := ../../venv/bin:$(PATH)
 
+.PHONY: exercise
+exercise:
+	./exercise.sh &> ./exercise.console
+
+.PHONY: all
+all: exercise
+
 .PHONY: all
 all:
 
