--- a/lambda-functions/Makefile
+++ b/lambda-functions/Makefile
@@ -1,7 +1,19 @@
 export PATH := ../venv/bin:$(PATH)
 
+.PHONY: add
+add:
+	./add.sh &> add.console
+
+.PHONY: multiply
+multiply:
+	./multiply.sh &> multiply.console
+
+.PHONY: sum
+sum:
+	./sum.sh &> sum.console
+
 .PHONY: all
-all:
+all: add multiply sum
 
 .PHONY: git-add
 git-add: all
