transmit-to-space-v2

--- a/advanced-tutorials/closures/Makefile
+++ b/advanced-tutorials/closures/Makefile
@@ -8,12 +8,16 @@ transmit-to-space:
 print-msg:
 	./print_msg.sh &> ./print_msg.console
 
+.PHONY: transmit-to-space-v2
+transmit-to-space-v2:
+	./transmit_to_space_v2.sh &> ./transmit_to_space_v2.console
+
 .PHONY: exercise
 exercise:
 	./exercise.sh &> ./exercise.console
 
 .PHONY: all
-all: transmit-to-space print-msg exercise
+all: transmit-to-space print-msg transmit-to-space-v2 exercise
 
 .PHONY: git-add
 git-add: all
