--- a/advanced-tutorials/map-filter-reduce/Makefile
+++ b/advanced-tutorials/map-filter-reduce/Makefile
@@ -16,6 +16,10 @@ map-inequable-iterables:
 zip-strings-numbers:
 	./zip_strings_numbers.sh &> ./zip_strings_numbers.console
 
+.PHONY: map-strings-numbers
+map-strings-numbers:
+	./map_strings_numbers.sh &> ./map_strings_numbers.console
+
 .PHONY: filter-scores
 filter-scores:
 	./filter_scores.sh &> ./filter_scores.console
@@ -33,7 +37,7 @@ exercise:
 	./exercise.sh &> ./exercise.console
 
 .PHONY: all
-all: map-pets map-circle-areas map-inequable-iterables zip-strings-numbers filter-scores filter-dromes reduce-numbers exercise
+all: map-pets map-circle-areas map-inequable-iterables zip-strings-numbers map-strings-numbers filter-scores filter-dromes reduce-numbers exercise
 
 .PHONY: git-add
 git-add: all
