--- a/advanced-tutorials/regular-expressions/Makefile
+++ b/advanced-tutorials/regular-expressions/Makefile
@@ -1,11 +1,11 @@
 export PATH := ../../venv/bin:$(PATH)
 
-.PHONY: example
-example:
-	./example.sh &> ./example.console
+.PHONY: exercise
+exercise:
+	./exercise.sh &> ./exercise.console
 
 .PHONY: all
-all: example
+all: exercise
 
 .PHONY: git-add
 git-add: all
