--- a/advanced-tutorials/sets/Makefile
+++ b/advanced-tutorials/sets/Makefile
@@ -4,10 +4,6 @@ export PATH := ../../venv/bin:$(PATH)
 words:
 	./words.sh &> ./words.console
 
-.PHONY: participants
-participants:
-	./participants.sh &> ./participants.console
-
 .PHONY: intersection
 intersection:
 	./intersection.sh &> ./intersection.console
@@ -25,7 +21,7 @@ union:
 	./union.sh &> ./union.console
 
 .PHONY: all
-all: words participants intersection symmetric-difference difference union
+all: words intersection symmetric-difference difference union
 
 .PHONY: git-add
 git-add: all
