docs: learn advanced python

--- a/advanced-tutorials/sets/Makefile
+++ b/advanced-tutorials/sets/Makefile
@@ -2,7 +2,8 @@ export PATH := ../../venv/bin:$(PATH)
 
 .PHONY: words
 words:
-	./words.sh &> ./words.console
+	# Notice: the output is likely to change
+	# ./words.sh &> ./words.console
 
 .PHONY: intersection
 intersection:
@@ -10,19 +11,23 @@ intersection:
 
 .PHONY: symmetric-difference
 symmetric-difference:
-	./symmetric_difference.sh &> ./symmetric_difference.console
+	# Notice: the output is likely to change
+	# ./symmetric_difference.sh &> ./symmetric_difference.console
 
 .PHONY: difference
 difference:
-	./difference.sh &> ./difference.console
+	# Notice: the output is likely to change
+	# ./difference.sh &> ./difference.console
 
 .PHONY: union
 union:
-	./union.sh &> ./union.console
+	# Notice: the output is likely to change
+	# ./union.sh &> ./union.console
 
 .PHONY: exercise
 exercise:
-	./exercise.sh &> exercise.console
+	# Notice: the output is likely to change
+	# ./exercise.sh &> exercise.console
 
 .PHONY: all
 all: words intersection symmetric-difference difference union exercise
